component-library/components/simple/card/card.scss
.c-card {
    display: flex;
    flex-direction: column;
    gap: 1rem;

    &__content, &__header, &__button, &--icon &__imagery {
        padding: 0 1.5rem;
    }
    &--icon {
        padding: 1.5rem 0;
    }
    &--image {
        padding: 0 0 1.5rem 0;
    }

    &__content {
        font-size: var(--paragraph);
        font-weight: var(--font-weight-body);
        line-height: var(--line-height);
    }

    &__header {
        display: grid;
        gap: 0.25rem;
        font-weight: var(--font-weight-headings);
        line-height: var(--line-height);
        width: 100%;
        @supports (text-wrap: balance) {
          text-wrap: balance;
        }
      
        &__eyebrow_heading {
          grid-row: 1;
          font-size: var(--eyebrow-heading);
          letter-spacing: var(--letter-spacing-wide);
          text-transform: uppercase;
        }
      
        &__primary_heading {
          word-break: break-word;
          font-size: var(--small-heading);
          letter-spacing: var(--letter-spacing);
        }
      
        &__eyebrow_heading + &__primary_heading {
          grid-row: 2;
        }
    }
}

